--- a/Capture.plist
+++ b/Capture.plist
@@ -1,1 +1,1 @@
-{ Filter = { Bundles = ( "com.apple.camera", "com.apple.springboard" ); Executables = ( "assistantd" ); Mode = "Any"; }; }
+{ Filter = { Bundles = ( "com.apple.camera", "com.apple.springboard" ); Executables = ( "assistantd" ); }; }
