--- a/Resources/Capture.plist
+++ b/Resources/Capture.plist
@@ -162,7 +162,7 @@
 			<key>label</key>
 			<string>Donate ❤️</string>
 			<key>url</key>
-			<string>http://poomsmart.github.io/repo/</string>
+			<string>https://poomsmart.github.io/repo/</string>
 		</dict>
        <dict>
         <key>cell</key>
@@ -170,7 +170,7 @@
         <key>footerAlignment</key>
         <integer>1</integer>
         <key>footerText</key>
-        <string>© 2013 - 2016 Thatchapon Unprasert
+        <string>© 2013 - 2017 Thatchapon Unprasert
 (@PoomSmart)</string>
       </dict>
       <dict>
